--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/KvAagUxO3OY?si=UbGAseVRWMnhwZ55" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 </section>
+<section class="categoria">
+    <h1>Outras musicas</h2>
+        <div class="categoria-videos"
+        <a href="https://www.youtube.com/watch?v=SnklG02Yvw8">
+            <img src="https://www.youtube.com/watch?v=SnklG02Yvw8">
+        </a>
+        <
+    
+</section>
 
 </body>
 </html>
