--- a/index.html
+++ b/index.html
@@ -22,12 +22,26 @@
 </section>
 <section class="categoria">
     <h1>Outras musicas</h2>
-        <div class="categoria-videos"
+        <div class="categoria-videos">
         <a href="https://www.youtube.com/watch?v=SnklG02Yvw8">
-            <img src="https://www.youtube.com/watch?v=SnklG02Yvw8">
+            <img src="https://img.youtube.com/vi/SnklG02Yvw8/maxresdefault.jpg"
         </a>
-        <
+        <a href="https://www.youtube.com/watch?v=oD9izvb3gO0">
+            <img src="https://img.youtube.com/vi/oD9izvb3gO0/maxresdefault.jpg"
+        </a>
+        <a href="https://www.youtube.com/watch?v=QxZFjShiXhA">
+            <img src="https://img.youtube.com/vi/QxZFjShiXhA/maxresdefault.jpg">
+        </a>
+            <a href="https://www.youtube.com/watch?v=tsyETGFUXiI">
+                <img src="https://img.youtube.com/vi/tsyETGFUXiI/maxresdefault.jpg">
+            </a>
+                <a href="https://www.youtube.com/watch?v=9Vt4XguN2">
+                    <img src="https://img.youtube.com/vi/9Vt4XguN2/maxresdefault.jpg">
     
+
+
+
+    </div>
 </section>
 
 </body>
